k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-bank
  template:
    metadata:
      labels:
        app: mini-bank
    spec:
      containers:
        - name: mini-bank
          image: mini-bank-app:latest
          ports:
            - containerPort: 8080
