k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mini-bank-postgres
spec:
  serviceName: mini-bank-postgres
  replicas: 1
  selector:
    matchLabels:
      app: mini-bank-postgres
  template:
    metadata:
      labels:
        app: mini-bank-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-init
          configMap:
            name: mini-bank-postgres-init
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
