k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-bank-postgres
spec:
  selector:
    app: mini-bank-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
