k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-bank
spec:
  selector:
    app: mini-bank
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
